--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -88,3 +88,67 @@ body{
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
+
+.main{
+    margin-top: 1rem;
+}
+.item-list{
+    max-width: var(--md-screen);
+    margin: 0 auto;
+    padding: 0 1rem;
+    border-radius: 12px;
+    box-sizing: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+.item-card{
+    width: 100%;
+    margin: 1rem auto;
+    padding: 1rem;
+    background-color: var(--white);
+    border-radius: 12px;
+    box-sizing: 0 8px 16px rgba( 0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.item-card__header{
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 0.5rem;
+}
+.item-card__title{
+    font-family: "Poppins", serif;
+    font-weight: 600;
+}
+.item-card__body{
+    flex-grow: 1;
+}
+.item-card__description{
+    font-size: 1.1rem;
+    line-height: 1.5rem;
+    margin: 0;
+    color: #666;
+}
+.item-card__footer{
+    display: flex;
+    justify-content: flex-end;
+    gap: 0.5rem;
+}
+.item-card__button{
+    padding: .5rem 1 rem;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.item-card__button--edit{
+    background-color: var(--blue-300);
+    color: var(--white);
+}
+.item-card__button--edit:hover{
+    background-color: var(--blue-400)
+}
+.item-card__button--delete{
+    background-color: var(--red-300);
+    color: var(white);
+}
+.item-card__button--delete:hover{
+    background-color: var(--red-400);
+}
